--- a/Experimental verification of the Einstein's photoelectric equation - 1.1/tex/main.tex
+++ b/Experimental verification of the Einstein's photoelectric equation - 1.1/tex/main.tex
@@ -29,7 +29,7 @@
 \begin{figure}[h]
 \center{\includegraphics[scale=0.18]{my_plot2.png}}
 \end{figure}
-Постройте график зависимости $V_0(\omega)$. По графику определим постоянную Планка, оценим погрешность результата и сравним найденное значение с табличным. 
+Построим график зависимости $V_0(\omega)$. По графику определим постоянную Планка, оценим погрешность результата и сравним найденное значение с табличным. 
 \begin{figure}[h]
 \center{\includegraphics[scale=0.18]{my_plot3.png}}
 \end{figure}
