--- a/Determination of the energy of the alpha particles from the value of their mileage in air - 4.1/analysis.ipynb
+++ b/Determination of the energy of the alpha particles from the value of their mileage in air - 4.1/analysis.ipynb
@@ -405,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data3['N0'] = (data3['N1'] + data3['N2'] + data3['N3']) / 3.0\n",
